after first review

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru, en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,87 +18,58 @@
             <section class="profile section">
                 <img src="./images/avatar.jpg" alt="Avatar" class="profile__avatar">
                 <div class="profile__info">
-                    <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button class="button profile__edit-button"></button>
+                    <div class="profile__info-case">
+                        <h1 class="profile__name">Жак-Ив Кусто</h1>
+                        <button type="button" class="profile__edit-button"></button>
+                    </div>
                     <p class="profile__description">Исследователь океана</p>
                 </div>
-                <button class="button profile__add-button">
-                    <img src="./images/add-button.svg" alt="plus" class="profile__add-button-vector">
-                </button>
+                <button type="button" class="profile__add-button"></button>
             </section>
             <section class="elements section">
-                <figure class="element">
-                    <div class="element__group">
-                        <img src="./images/element-karachaevsk.jpg" alt="Карачаевск" class="element__image">
-                        <figcaption class="element__caption">
-                            <p class="element__caption-text">Карачаевск</p>
-                            <button class="button element__like"></button>
-                        </figcaption>
-                    </div>
-                </figure>
-                <figure class="element">
-                    <div class="element__group">
-                        <img src="./images/element-elbrus.jpg" alt="Эльбрус" class="element__image">
-                        <figcaption class="element__caption">
-                            <p class="element__caption-text">Гора Эльбрус</p>
-                            <button class="button element__like"></button>
-                        </figcaption>
-                    </div>
-                </figure>
-                <figure class="element">
-                    <div class="element__group">
-                        <img src="./images/element-dombay.png" alt="Домбай" class="element__image">
-                        <figcaption class="element__caption">
-                            <p class="element__caption-text">Домбай</p>
-                            <button class="button element__like"></button>
-                        </figcaption>
-                    </div>
-                </figure>
-                <figure class="element">
-                    <div class="element__group">
-                        <img src="./images/elenment-elbrus-myphoto.JPG" alt="Эльбрус" class="element__image">
-                        <figcaption class="element__caption">
-                            <p class="element__caption-text">Гора Эльбрус</p>
-                            <button class="button element__like"></button>
-                        </figcaption>
-                    </div>
-                </figure>
-                <figure class="element">
-                    <div class="element__group">
-                        <img src="./images/element-dombay.png" alt="Домбай" class="element__image">
-                        <figcaption class="element__caption">
-                            <p class="element__caption-text">Домбай</p>
-                            <button class="button element__like"></button>
-                        </figcaption>
-                    </div>
-                </figure>
-                <figure class="element">
-                    <div class="element__group">
-                        <img src="./images/element-karachaevsk.jpg" alt="Карачаевск" class="element__image">
-                        <figcaption class="element__caption">
-                            <p class="element__caption-text">Карачаево-Черкессия</p>
-                            <button class="button element__like"></button>
-                        </figcaption>
-                        
-                    </div>
-                </figure>
+                <div class="element">
+                    <img src="./images/element-karachaevsk.jpg" alt="Карачаевск" class="element__image">
+                    <p class="element__caption">Карачаевск</p>
+                    <button type="button" class="element__like"></button> <!-- type="submit"? -->
+                </div>
+                <div class="element">
+                    <img src="./images/element-elbrus.jpg" alt="Эльбрус" class="element__image">
+                    <p class="element__caption">Гора Эльбрус</p>
+                    <button type="button" class="element__like"></button>
+                </div>
+                <div class="element">
+                    <img src="./images/element-dombay.png" alt="Домбай" class="element__image">
+                    <p class="element__caption">Домбай</p>
+                    <button type="button" class="element__like"></button>
+                </div>
+                <div class="element">
+                    <img src="./images/elenment-elbrus-myphoto.JPG" alt="Эльбрус" class="element__image">
+                    <p class="element__caption">Гора Эльбрус</p>
+                    <button type="button" class="element__like"></button>
+                </div>
+                <div class="element">
+                    <img src="./images/element-dombay.png" alt="Домбай" class="element__image">
+                    <p class="element__caption">Домбай</p>
+                    <button type="button" class="element__like"></button>
+                </div>
+                <div class="element">
+                    <img src="./images/element-karachaevsk.jpg" alt="Карачаевск" class="element__image">
+                    <p class="element__caption">Карачаево-Черкессия</p>
+                    <button type="button" class="element__like"></button>
+                </div>
             </section>
         </main>
-        <section class="popup popup_opened">
+        <section class="popup">
             <div class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form action="#" method="POST" class="form">
+                <form name="profile-edit-form" action="#" method="POST" class="form">
+                    <button type="reset" class="popup__button popup__button_assignment_close"></button>
                     <fieldset class="form__fieldset">
-                        <button class="button popup__button popup__button_close"></button>
-                        <label for="name" class="form__label">
-                            <input type="text" name="profile-info" id="name" class="form__item form__item_name" placeholder="Жак-Ив Кусто">
-                        </label>
-                        <label for="description" class="form__label">
-                            <input type="text" name="profile-info" id="description" class="form__item form__item_description" placeholder="Исследователь океана">
-                        </label>                       
+                        <input type="text" name="profile-info" id="name" class="form__item" placeholder="Имя" value="Жак-Ив Кусто">
+                        <input type="text" name="profile-info" id="description" class="form__item" placeholder="Описание профиля" value="Исследователь океана">
                     </fieldset>
                     <fieldset class="form__fieldset">
-                        <button type="submit" class="button popup__button popup__button_save">Сохранить</button>
+                        <button type="submit" class="popup__button popup__button_assignment_save">Сохранить</button>
                     </fieldset>
                 </form>
             </div>
