--- a/index.html
+++ b/index.html
@@ -26,46 +26,17 @@
                 </div>
                 <button type="button" class="profile__add-button"></button>
             </section>
-            <section class="elements section">
-                <div class="element">
-                    <img src="./images/element-karachaevsk.jpg" alt="Карачаевск" class="element__image">
-                    <p class="element__caption">Карачаевск</p>
-                    <button type="button" class="element__like"></button> <!-- type="submit"? -->
-                </div>
-                <div class="element">
-                    <img src="./images/element-elbrus.jpg" alt="Эльбрус" class="element__image">
-                    <p class="element__caption">Гора Эльбрус</p>
-                    <button type="button" class="element__like"></button>
-                </div>
-                <div class="element">
-                    <img src="./images/element-dombay.png" alt="Домбай" class="element__image">
-                    <p class="element__caption">Домбай</p>
-                    <button type="button" class="element__like"></button>
-                </div>
-                <div class="element">
-                    <img src="./images/elenment-elbrus-myphoto.JPG" alt="Эльбрус" class="element__image">
-                    <p class="element__caption">Гора Эльбрус</p>
-                    <button type="button" class="element__like"></button>
-                </div>
-                <div class="element">
-                    <img src="./images/element-dombay.png" alt="Домбай" class="element__image">
-                    <p class="element__caption">Домбай</p>
-                    <button type="button" class="element__like"></button>
-                </div>
-                <div class="element">
-                    <img src="./images/element-karachaevsk.jpg" alt="Карачаевск" class="element__image">
-                    <p class="element__caption">Карачаево-Черкессия</p>
-                    <button type="button" class="element__like"></button>
-                </div>
+            <section class="photo-grid section">
+                <ul class="elements"></ul>
             </section>
         </main>
-        <section class="popup">
+        <section class="popup popup__mode_profile-edit">
             <div class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <button type="reset" class="popup__button popup__button_assignment_close"></button>
                 <form name="profile-edit-form" action="#" method="POST" class="form">
                         <fieldset class="form__fieldset">
-                        <input type="text" name="profile-info" id="name" class="form__item" placeholder="Имя" value="Жак-Ив Кусто">
+                        <input type="text" name="profile-info" id="username" class="form__item" placeholder="Имя" value="Жак-Ив Кусто">
                         <input type="text" name="profile-info" id="description" class="form__item" placeholder="Описание профиля" value="Исследователь океана">
                     </fieldset>
                     <fieldset class="form__fieldset">
@@ -73,11 +44,45 @@
                     </fieldset>
                 </form>
             </div>
-            
+        </section>
+        <section class="popup popup__mode_place-add">
+            <div class="popup__container">
+                <h2 class="popup__title">Новое место</h2>
+                <button type="reset" class="popup__button popup__button_assignment_close"></button>
+                <form name="place-add-form" action="#" method="POST" class="form">
+                        <fieldset class="form__fieldset">
+                        <input type="text" name="place-name" id="name" class="form__item" placeholder="Название">
+                        <input type="text" name="place-link" id="link" class="form__item" placeholder="Ссылка на картинку">
+                    </fieldset>
+                    <fieldset class="form__fieldset">
+                        <button type="submit" class="popup__button popup__button_assignment_save">Создать</button>
+                    </fieldset>
+                </form>
+            </div>
+        </section>
+        <section class="popup popup__mode_card-show">
+            <div class="popup__container popup__container_mode-card-show">
+                <button class="popup__button popup__button_assignment_close"></button>
+                <figure class="popup__figure">
+                    <img alt="#" src="#" class="popup__figure-image">
+                    <figcaption class="popup__figcaption"></figcaption>
+                </figure>
+            </div>
         </section>
         <footer class="footer section">
             <p class="footer__paragraph">&copy; 2020 Mesto Russia</p>
         </footer>
     </div>
+    <template id="elements-item">
+        <li class="element">
+            <button type="button" class="element__delete-button"></button>
+            <img class="element__image">
+            <div class="element__caption">
+                <p class="element__title"></p>
+                <button type="button" class="element__like"></button>
+            </div>
+        </li>
+    </template>
+    <script src="/scripts/index.js"></script>
 </body>
 </html>
