POST/DELETE(cards) fixes

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
                 </div>
                 <button type="button" class="profile__add-button"></button>
             </section>
-            <section class="photo-grid section">
-                <ul class="elements"></ul>
+            <section class="elements section">
+                
             </section>
         </main>
         <section class="popup popup__mode_profile-edit">
@@ -108,7 +108,7 @@
         </footer>
     </div>
     <template id="elements-item">
-        <li class="element">
+        <article class="element">
             <button type="button" class="element__delete-button"></button>
             <img class="element__image">
             <div class="element__caption">
@@ -118,7 +118,7 @@
                     <span class="element__like-count"></span>
                 </div>
             </div>
-        </li>
+        </article>
     </template>
 </body>
 </html>
