--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="mesto russia"/>
     <meta name="author" content="north" />
-    <!--<link rel="stylesheet" href="./pages/index.css">-->
+    <link rel="shortcut icon" href="<%=require('./images/header-logo.svg')%>">
     <title>Mesto Russia</title>
 </head>
 <body class="base">
@@ -17,7 +17,7 @@
         <main class="content">
             <section class="profile section">
                 <div class="profile__avatar-case">
-                    <img src="<%=require('./images/avatar.jpg')%>" alt="Avatar" class="profile__avatar">
+                    <img src="" alt="Avatar" class="profile__avatar">
                     <button type="button" class="profile__avatar-edit-button"></button>
                 </div>
                 <div class="profile__info">
